--- a/katalog-produk.html
+++ b/katalog-produk.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="SMALL CHARM, BIG SMILE.png" type="image/x-icon">
     <title>KeychainID - Pesan via DM IG</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
@@ -51,4 +52,5 @@
 
 
 </body>
+
 </html>
