--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="SMALL CHARM, BIG SMILE.png" type="image/x-icon">
     <title>KeychainID - Pesan via DM IG</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
@@ -27,4 +28,5 @@
 <h1 style="font-size:42px; margin-bottom:10px;">Selamat Datang di Keychain.id</h1>
 <p style="font-size:18px; margin-bottom:20px;">Temukan gantungan kunci unik, custom, dan premium untuk kebutuhan Anda.</p>
 <a href="katalog-produk.html" style="background:white; color:#ff4da6; padding:12px 22px; border-radius:10px; text-decoration:none; font-weight:bold; box-shadow:0 3px 8px rgba(0,0,0,0.2);">Lihat Produk</a>
+
 </header>
